<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/introMessage"
        android:textSize="30sp" />

    <View
        android:id="@+id/placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button"
        android:layout_below="@id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/placeholder"
        android:text="@string/buttonText"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@id/placeholder"
        android:text="@string/checkBoxText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_below="@id/button"
        android:layout_width="0dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/placeholder"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flag"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/flag" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/placeholder"
        android:text="@string/switchText">
    </androidx.appcompat.widget.SwitchCompat>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:hint="@string/textHint"
        android:inputType="textPersonName|textCapWords"
        android:minHeight="48dp"
        android:importantForAutofill="no" />


</RelativeLayout>
